crates/ruma-events/tests/ui/08-enum-invalid-path.stderr
error: well-known matrix events have to start with `m.` found `not.a.path`
  --> $DIR/08-enum-invalid-path.rs:11:9
   |
11 |         "not.a.path",
   |         ^^^^^^^^^^^^

error[E0433]: failed to resolve: could not find `not` in `ruma_events`
 --> $DIR/08-enum-invalid-path.rs:5:9
  |
5 |         "m.not.a.path",
  |         ^^^^^^^^^^^^^^ could not find `not` in `ruma_events`

error[E0639]: cannot create non-exhaustive struct using struct expression
 --> $DIR/08-enum-invalid-path.rs:3:1
  |
3 | / event_enum! {
4 | |     enum State {
5 | |         "m.not.a.path",
6 | |     }
7 | | }
  | |_^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
